log/build_2024-03-20_17-41-38/tello_control_gamepad/stderr.log
  File "/home/ken/tello_ros_ws/install/tello_control_gamepad/lib/python3.10/site-packages/tello_control_gamepad/node.py", line 88
    print(twist_msg.)
                    ^
SyntaxError: invalid syntax

